Implement JediTerm as the game's frontend